# blog

./: _config.yml  db.json  deploy.sh  package-lock.json
.github/workflows/: hexodeploy.yml
html_markbook/: favorites_2021_8_8.html
public/: index.html
public/about/: index.html
public/archives/: index.html
public/archives/2021/: index.html
public/books/: index.html
public/categories/: index.html
public/categories/bios/: index.html
public/categories/git/: index.html
public/categories/hexo/: index.html
public/categories/liveoverflow/: index.html
public/categories/markdown/: index.html
public/categories/test/: index.html
public/categories/tools/: index.html
public/links/: index.html
public/repository/: index.html
public/tags/: index.html
source/_posts/: 00_bios_protect_mode_enable_flow.md  00_hello_world.md  01_first_article.md  02_hexo_中文手册.md  04_UFEI_protocol.md  05_git_normal_cmd.md  06_Biso_interface_update.md  README.md  README_zh-CN.md  afwefa.md  first_article.md  language_markdown_ref.md  xhlutestawefa.md
source/_posts/c/myprintf_log_lib/: CMakeLists.txt  build.sh
source/_posts/c/myprintf_log_lib/inc/: logger.h  myprintf.h
source/_posts/c/myprintf_log_lib/output/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
source/_posts/c/myprintf_log_lib/src/: main.c  myprintf.c
source/about/: index.md
source/books/: index.md
source/categories/: index.md
source/links/: index.md
source/repository/: index.md
source/tags/: index.md
themes/Hacker/: _config.yml
themes/pure/: _config.yml
(+114 files in other folders)
